--- a/part3/package.json
+++ b/part3/package.json
@@ -8,8 +8,7 @@
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ridwan Mahmoud",
   "license": "MIT",
@@ -22,8 +21,6 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin-js": "^1.6.3",
-    "eslint": "^8.57.0",
     "nodemon": "^3.1.0"
   }
 }
