--- a/part3/package.json
+++ b/part3/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "phonebook_backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "adding server and crud operation",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Ridwan Mahmoud",
   "license": "MIT",
@@ -17,10 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^1.6.3",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0"
   }
 }
