new mongodb_uri_2 added

--- a/Part4/bloglist/.env
+++ b/Part4/bloglist/.env
@@ -1,4 +1,6 @@
 MONGODB_URI =
 'mongodb+srv://FSOBlogList:passwordofbloglist@clusterbl.7zfz9eb.mongodb.net/BLOGLIST?retryWrites=true&w=majority&appName=ClusterBL'
 
+MONGODB_URI_2 =mongodb://FSOBlogList:passwordofbloglist@ac-dgfvlbc-shard-00-00.7zfz9eb.mongodb.net:27017,ac-dgfvlbc-shard-00-01.7zfz9eb.mongodb.net:27017,ac-dgfvlbc-shard-00-02.7zfz9eb.mongodb.net:27017/BLOGLIST?ssl=true&replicaSet=atlas-j55t1m-shard-0&authSource=admin&retryWrites=true&w=majority&appName=ClusterBL
+
 PORT = 3003
