--- a/Part4/bloglist/package.json
+++ b/Part4/bloglist/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "lint": "eslint .",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -15,12 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   }
 }
