--- a/Part4/bloglist/package.json
+++ b/Part4/bloglist/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env  NODE_ENV=test node --test",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -25,7 +25,11 @@
     "@stylistic/eslint-plugin-js": "^1.7.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
