--- a/part7/redux-bloglist/bloglist-frontend/package.json
+++ b/part7/redux-bloglist/bloglist-frontend/package.json
@@ -13,14 +13,18 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
